# stackoverflow-tags-suggest

./: .env.sample  .gitignore  .pre-commit-config.yaml  LICENSE  Procfile  README.md  changelog.md  pyproject.toml
.github/workflows/: main.yml
app/: main.py
app/api/: api.py  config.py  facade.py  schemas.py
app/api/routers/: base.py  predict.py
app/suggestor/: preprocessors.py  suggestor.py
app/suggestor/artifacts/: all_tags.py  cv.pkl  tfidf.pkl
tests/: test_api.py  test_predict.py  test_preprocess.py
