[tool.poetry]
name = "StackOverflow API - prédiction de Tags"
version = "0.1.1"
description = "Suggestion de Tags sur les Questions StackOverflow"
authors = ["DamSha <chauvet.damien@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.3"}
pydantic = "^2.9.2"
slowapi = "^0.1.9"


[tool.poetry.group.dev.dependencies]
git-cliff = "^2.6.1"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.6.1"
commitizen = "^3.30.0"

#[tool.pytest.ini_options]
#addopts = "--cov=app --cov-report html"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
