[tool.poetry]
name = "StackOverflow API - prédiction de Tags"
version = "0.1.1"
description = "Suggestion de Tags sur les Questions StackOverflow"
authors = ["DamSha <chauvet.damien@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { extras = ["standard"], version = "^0.115.3" }
pydantic = "^2.9.2"
slowapi = "^0.1.9"
pandas = "^2.2.3"
lxml = "^5.3.0"
scikit-learn = "^1.5.2"
spacy = "^3.8.2"
en_core_web_md = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0.tar.gz" }
cssselect = "^1.2.0"

[tool.poetry.group.dev.dependencies]
git-cliff = "^2.6.1"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.6.1"
commitizen = "^3.30.0"
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
bandit = "^1.7.10"
pre-commit = "^4.0.1"

[tool.black]
line-length = 79

[tool.pycln]
all = true

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.bandit]
exclude_dirs = ["tests", ".idea", "docs", "artifacts"]

#[tool.pytest.ini_options]
#addopts = "--cov=app --cov-report html"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
